@@ -85,6 +85,7 @@
         {{ form.scrape_javascript|as_crispy_field }}
         {{ form.token|as_crispy_field }}
         {{ form.token_header|as_crispy_field }}
+        {{ form.verify_ssl|as_crispy_field }}
       </div>
     </div>
 
